specify task matrix child widths in flex terms to fix horizontal scroll

--- a/src/styles/_matrix-container.scss
+++ b/src/styles/_matrix-container.scss
@@ -18,13 +18,11 @@ $block-class:'matrix-container';
 
         &__task-matrix {
             overflow: scroll;
-            min-width: calc(100vw - #{$sidebar-width});
+            flex-grow: 1;
         }
 
         &__sidebar {
-            flex: 1;
-            max-width: $sidebar-width;
-            width: $sidebar-width;
+            flex-basis: $sidebar-width;
         }
     }
 }
